--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 </head>
 
 <body>
-
     <canvas id="myCanvas">
     </canvas>
     <br><br>
@@ -25,7 +24,7 @@
     <button class="btn" id="text-btn">Add text</button><br /><br />
     <input id="footer-input" type="text" placeholder="add text for footer" /><br /><br />
     <button class="btn" id="footer-btn" onclick="addFooter()">Add footer text</button><br /><br />
-    <a id="download" download="canvas.png">
+    <a id="imageCanvas" download="canvas.png">
         <button class="btn" type="button" onClick="download()">Download</button>
     </a>
     <script src="script.js"></script>
